--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
   "cmake.sourceDirectory": "D:/jokiab/mitraGlobal/kasir_offline/linux",
   "builder.serverUrl": "http://127.0.0.1:17097",
   "builder.command": "flutter run",
-  "builder.runDevServer": true,
+  "builder.runDevServer": false,
   "builder.autoDetectDevServer": false,
-  "builder.launchType": "editor"
+  "builder.launchType": "desktop"
 }
